SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository, snapshots and future releases.
===============================================================================================

Enhancements:

Data compare:
  UI-Tables offer a new right mouse menu "Compare selected cells".
  Note that the function compares table cell selections. To compare complete tables use the Ctrl+a shortcut.
  This feature includes improvements and bug fixes for the DBDiff Plugin.

Table cell data popup improvements:
  Now offers a list of previous files to choose from.
  The file chooser opened by the "Browse" button was changed from an open to a save dialog.
  Info: Double click a table cell to open its cell data popup

#611 Reconnect dialog (ctrl+T) allows to skip opening a new connection.
  To open a connection again reopen the reconnect dialog.
  This option may be useful for example when your connection
  disturbs external activities on the database.

Handling of copying SQL result rows to extra windows was unified and now offers
  the "mark duplicate rows" function.
  Ways to copy result rows to extra windows are:
  - SQL result search
  - right mouse menu "Copy selected rows to new window"
  - right mouse menu "Copy colored rows to new window"

Find in preferences/configurations:
  Former "Find in Global Preferences and New Session" now allows to search in
  the Alias properties and Saved Sessions dialogs, too.

Find in Global Preferences and New Session Properties (menu File --> Find in preferences):
  Leaf nodes of the search dialog tree can now be double clicked to jump to their result in the UI.
  Note: Non leaf nodes can be right clicked to jump to their result in the UI.

Dark theme: Background colors of popups for
  code completion (ctrl+space), tools (ctrl+t) and bookmarks (ctrl+j) are now adjusted
  when the dark theme ist used.

Look and Feel plugin: Upgrade FlatLaF to version 3.0
