@@ -23,12 +23,15 @@ graph.showddl=show DDL
 graph.saveGraph=Save graph
 graph.renameGraph=Rename graph
 graph.removeGraph=Remove graph
+graph.detach=Detach graph
+graph.detach.tooltip=Detached graphs remain available to be linked
 graph.refreshAllTables=Refresh all tables
 graph.FindColumns=Find columns in Graph ...
 graph.scriptAllTables=Script all tables
 graph.showConstr=Show constraint names
 graph.zoomPrint=Zoom/Print
 graph.delGraph=Do you really wish to delete this graph?
+graph.detachGraph=Do you really wish to detach this graph?\nDetached graphs remain available to be linked.
 graph.newName=Please enter a new name
 graph.selGraph=Select graph
 graph.selGraphToAdd=Select the graph to add the selected tables to
