@@ -20,16 +20,16 @@ action.net.sourceforge.squirrel_sql.plugins.graph.NewQueryBuilderWindowAction.to
 action.net.sourceforge.squirrel_sql.plugins.graph.NewQueryBuilderWindowAction.image=graph.png
 
 action.net.sourceforge.squirrel_sql.plugins.graph.link.LinkGraphAction.name=Link Graph
-action.net.sourceforge.squirrel_sql.plugins.graph.link.LinkGraphAction.tooltip=Link an other Session's Graph to this Session
+action.net.sourceforge.squirrel_sql.plugins.graph.link.LinkGraphAction.tooltip=Link another Session's or detached Graph to this Session
 action.net.sourceforge.squirrel_sql.plugins.graph.link.LinkGraphAction.image=graph_lnk.png
 
 action.net.sourceforge.squirrel_sql.plugins.graph.link.CopyGraphAction.name=Copy Graph
-action.net.sourceforge.squirrel_sql.plugins.graph.link.CopyGraphAction.tooltip=Copy Graph to paste to an other or the same Session
+action.net.sourceforge.squirrel_sql.plugins.graph.link.CopyGraphAction.tooltip=Copy Graph to paste to another or the same Session
 action.net.sourceforge.squirrel_sql.plugins.graph.link.CopyGraphAction.image=copyGraph.png
 
 
 action.net.sourceforge.squirrel_sql.plugins.graph.link.PasteGraphAction.name=Paste Graph
-action.net.sourceforge.squirrel_sql.plugins.graph.link.PasteGraphAction.tooltip=Paste Graph from an other or the same Session
+action.net.sourceforge.squirrel_sql.plugins.graph.link.PasteGraphAction.tooltip=Paste Graph from another or the same Session
 action.net.sourceforge.squirrel_sql.plugins.graph.link.PasteGraphAction.image=pasteGraph.png
 
 action.net.sourceforge.squirrel_sql.plugins.graph.AddTableAtQursorToGraph.image=
