@@ -6,6 +6,10 @@ Not yet released, available in our GIT repository, snapshots and future releases
 
 Enhancements:
 
+Graph Plugin:
+  A Graph's context menu now offers an option to detach a Graph from a Session.
+  The Graph will remain available for linking, see the "Link Graph" toolbar button.
+
 Data compare:
   UI-Tables offer a new right mouse menu "Compare selected cells".
   Note that the function compares table cell selections. To compare complete tables use the Ctrl+a shortcut.
